ghc-6.2/hslibs/win32/Win32MM_stub_ffi.h

extern void* prim_heapCreate(DWORD arg1,DWORD arg2,DWORD arg3);
extern HANDLE access_prim_heapCreate_res1(HsPtr);
extern int access_prim_heapCreate_gc_failed(HsPtr);
extern void* access_prim_heapCreate_gc_failstring(HsPtr);
extern void* prim_heapDestroy(HANDLE arg1);
extern int access_prim_heapDestroy_gc_failed(HsPtr);
extern void* access_prim_heapDestroy_gc_failstring(HsPtr);
extern void* prim_heapFree(HANDLE arg1,DWORD arg2,void * arg3);
extern int access_prim_heapFree_gc_failed(HsPtr);
extern void* access_prim_heapFree_gc_failstring(HsPtr);
extern void* prim_heapLock(HANDLE arg1);
extern int access_prim_heapLock_gc_failed(HsPtr);
extern void* access_prim_heapLock_gc_failstring(HsPtr);
extern void* prim_heapReAlloc(HANDLE arg1,DWORD arg2,void * arg3,DWORD arg4);
extern void * access_prim_heapReAlloc_res1(HsPtr);
extern int access_prim_heapReAlloc_gc_failed(HsPtr);
extern void* access_prim_heapReAlloc_gc_failstring(HsPtr);
extern void* prim_heapSize(HANDLE arg1,DWORD arg2,void * arg3);
extern DWORD access_prim_heapSize_res1(HsPtr);
extern int access_prim_heapSize_gc_failed(HsPtr);
extern void* access_prim_heapSize_gc_failstring(HsPtr);
extern void* prim_heapUnlock(HANDLE arg1);
extern int access_prim_heapUnlock_gc_failed(HsPtr);
extern void* access_prim_heapUnlock_gc_failstring(HsPtr);
extern int prim_heapValidate(HANDLE arg1,DWORD arg2,void * arg3);
extern void prim_moveMemory(void * arg1,void * arg2,DWORD arg3);
extern DWORD prim_mEM_COMMIT();
extern DWORD prim_mEM_RESERVE();
extern DWORD prim_pAGE_READONLY();
extern DWORD prim_pAGE_READWRITE();
extern DWORD prim_pAGE_EXECUTE();
extern DWORD prim_pAGE_EXECUTE_READ();
extern DWORD prim_pAGE_EXECUTE_READWRITE();
extern DWORD prim_pAGE_GUARD();
extern DWORD prim_pAGE_NOACCESS();
extern DWORD prim_pAGE_NOCACHE();
extern DWORD prim_mEM_DECOMMIT();
extern DWORD prim_mEM_RELEASE();
extern void* prim_virtualAlloc(void * arg1,DWORD arg2,DWORD arg3,DWORD arg4);
extern void * access_prim_virtualAlloc_res1(HsPtr);
extern int access_prim_virtualAlloc_gc_failed(HsPtr);
extern void* access_prim_virtualAlloc_gc_failstring(HsPtr);
extern void* prim_virtualFree(void * arg1,DWORD arg2,DWORD arg3);
extern int access_prim_virtualFree_gc_failed(HsPtr);
extern void* access_prim_virtualFree_gc_failstring(HsPtr);
extern void* prim_virtualLock(void * arg1,DWORD arg2);
extern int access_prim_virtualLock_gc_failed(HsPtr);
extern void* access_prim_virtualLock_gc_failstring(HsPtr);
extern void* prim_virtualProtect(void * arg1,DWORD arg2,DWORD arg3);
extern int access_prim_virtualProtect_gc_failed(HsPtr);
extern void* access_prim_virtualProtect_gc_failstring(HsPtr);
extern void* prim_virtualProtectEx(HANDLE arg1,void * arg2,DWORD arg3,DWORD arg4,void * arg5);
extern int access_prim_virtualProtectEx_gc_failed(HsPtr);
extern void* access_prim_virtualProtectEx_gc_failstring(HsPtr);